--- a/ccs/style.css
+++ b/ccs/style.css
@@ -1,4 +1,4 @@
-/* DEVELOPER: Jayden McRae, IS117-xxx, Fall 2024 */
+/* DEVELOPER: Jayden McRae, IS117-003, Fall 2024 */
 body {
     padding-top: 60px;
 }
