--- a/ccs/style.css
+++ b/ccs/style.css
@@ -1,9 +1,14 @@
 /* DEVELOPER: Jayden McRae, IS117-003, Fall 2024 */
 body {
-    padding-top: 60px;
+    margin: 0;
+    padding: 0;
+    background: url('../images/playstation-nintendo-xbox-steam-logos.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #fff;
 }
 footer {
-    background-color: #f8f9fa;
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 10px 0;
     text-align: center;
+    color: #000;
 }
