--- a/ccs/style.css
+++ b/ccs/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('images/playstation-nintendo-xbox-steam-logos-min.jpg') no-repeat center center fixed;
+    background: url('images/538648-game_512x512.png') no-repeat center center fixed;
     background-size: cover;
     color: #fff;
 }
